[gd_scene load_steps=2 format=3 uid="uid://build_screen"]

[ext_resource type="Script" path="res://src/ui/build_screen.gd" id="1_build"]

[node name="BuildScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_build")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.08, 0.12, 1.0)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="MainHBox" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="LeftPanel" type="VBoxContainer" parent="MarginContainer/MainHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="MarginContainer/MainHBox/LeftPanel"]
layout_mode = 2
text = "CHASSIS"
horizontal_alignment = 1

[node name="ChassisList" type="ItemList" parent="MarginContainer/MainHBox/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="ChassisInfo" type="Label" parent="MarginContainer/MainHBox/LeftPanel"]
layout_mode = 2
text = "Select a chassis"
autowrap_mode = 3

[node name="CenterPanel" type="VBoxContainer" parent="MarginContainer/MainHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="MarginContainer/MainHBox/CenterPanel"]
layout_mode = 2
text = "ARMOR"
horizontal_alignment = 1

[node name="ArmorList" type="ItemList" parent="MarginContainer/MainHBox/CenterPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="ArmorInfo" type="Label" parent="MarginContainer/MainHBox/CenterPanel"]
layout_mode = 2
text = "Select armor"
autowrap_mode = 3

[node name="RightPanel" type="VBoxContainer" parent="MarginContainer/MainHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="MarginContainer/MainHBox/RightPanel"]
layout_mode = 2
text = "WEAPON"
horizontal_alignment = 1

[node name="WeaponList" type="ItemList" parent="MarginContainer/MainHBox/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="WeaponInfo" type="Label" parent="MarginContainer/MainHBox/RightPanel"]
layout_mode = 2
text = "Select a weapon"
autowrap_mode = 3

[node name="BottomBar" type="HBoxContainer" parent="MarginContainer/MainHBox"]
layout_mode = 2
alignment = 1

[node name="WeightLabel" type="Label" parent="MarginContainer/MainHBox/BottomBar"]
layout_mode = 2
text = "Weight: 0 / 0 kg"

[node name="CreditsLabel" type="Label" parent="MarginContainer/MainHBox/BottomBar"]
layout_mode = 2
text = "Credits: 0"

[node name="TestBtn" type="Button" parent="MarginContainer/MainHBox/BottomBar"]
layout_mode = 2
text = "Test Battle"

[node name="BackBtn" type="Button" parent="MarginContainer/MainHBox/BottomBar"]
layout_mode = 2
text = "Back"

[connection signal="item_selected" from="MarginContainer/MainHBox/LeftPanel/ChassisList" to="." method="_on_chassis_selected"]
[connection signal="item_selected" from="MarginContainer/MainHBox/CenterPanel/ArmorList" to="." method="_on_armor_selected"]
[connection signal="item_selected" from="MarginContainer/MainHBox/RightPanel/WeaponList" to="." method="_on_weapon_selected"]
[connection signal="pressed" from="MarginContainer/MainHBox/BottomBar/TestBtn" to="." method="_on_test_pressed"]
[connection signal="pressed" from="MarginContainer/MainHBox/BottomBar/BackBtn" to="." method="_on_back_pressed"]
